Added test textarea. Added clear timeout function before each fail/pass function

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 			<button id="readyUp"> Im Ready! </button>
 		</div>
 	</div>	
+
+	<div class="row">
+		<div class="col-xs-12">
+			<textarea id="code-text"></textarea>
+			<input type="button" name="code-btn" id="code-btn" value="test"/>
+		</div>
+	</div>
 </div>
 
 
