app takes a new user email and password- must enable google api for this to work

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <input class="form-control" id="user-name-input" type="text">
             <label for="password-input">Password</label>
             <input class="form-control" id="password-input" type="text">
-            <button class="btn btn-primary" id="add-train-btn" type="submit" style="background-color: #ee7600; color: navy">Login</button>
+            <button class="btn btn-primary" id="login-btn" type="submit" style="background-color: #ee7600; color: navy">Login</button>
             <button class="btn btn-primary" id="add-newuser-btn" type="submit" style="background-color: #ee7600; color: navy">New User</button>
             <!-- button for new user login -->
 		</div>
@@ -29,10 +29,10 @@
 		<div id="new-user-modal" class="modal" style="background-color: orange">
 			<h1 class="modal-text">login here</h1>
 			<label for="user-name-input">User Name</label>
-            <input class="form-control" id="user-name-input" type="text">
+            <input class="form-control" id="new-user-name-input" type="text">
             <label for="password-input">Password</label>
             <input class="form-control" id="new-password-input" type="text">
-            <label for="password-input">Password Again</label>
+            <label for="password-again-input">Password Again</label>
             <input class="form-control" id="new-password-input-verify" type="text">
             <button class="btn btn-primary" id="submit-newuser-btn" type="submit" style="background-color: #ee7600; color: navy">Submit</button>
 		</div>
