changed to obscure password entry

--- a/login.html
+++ b/login.html
@@ -17,10 +17,10 @@
 
 		<div id="login-modal" class="modal">
 			<h1 class="modal-text">login here</h1>
-			<label for="user-name-input">User Name</label>
+			<label for="user-name-input">E-mail</label>
             <input class="form-control" id="user-name-input" type="text">
             <label for="password-input">Password</label>
-            <input class="form-control" id="password-input" type="text">
+            <input class="form-control" id="password-input" type="password">
             <button class="btn btn-primary" id="login-btn" type="submit" style="background-color: #ee7600; color: navy">Login</button>
             <button class="btn btn-primary" id="add-newuser-btn" type="submit" style="background-color: #ee7600; color: navy">New User</button>
             <!-- button for new user login -->
@@ -30,12 +30,12 @@
 
 		<div id="new-user-modal" class="modal" style="background-color: orange">
 			<h1 class="modal-text">login here</h1>
-			<label for="user-name-input">User Name</label>
+			<label for="user-name-input">E-mail</label>
             <input class="form-control" id="new-user-name-input" type="text">
             <label for="password-input">Password</label>
-            <input class="form-control" id="new-password-input" type="text">
+            <input class="form-control" id="new-password-input" type="password">
             <label for="password-again-input">Password Again</label>
-            <input class="form-control" id="new-password-input-verify" type="text">
+            <input class="form-control" id="new-password-input-verify" type="password">
             <button class="btn btn-primary" id="submit-newuser-btn" type="submit" style="background-color: #ee7600; color: navy">Submit</button>
 		</div>
 
