--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 
 <!-- This is the first page divs classes -->
-<div class="firstPageLayout">
+<div class="firstPageLayout" id="layoutFirstPage">
 	<div class="row" id="headerFirstPage">
-		<div class="col-xs-10 col-s-10 col-m-10 col-l-10 col-xl-10" id="firstPageUserInput">
-			<form method="post" action="" name="aform" target="_top">
+		<div class="firstPageUserInput">
+			<form class="userInputForm" method="post" action="" name="aform" target="_top">
 				<input type="hidden" name="action" value="login">
 				<input type="hidden" name="hide" value="">
-				<table class='center'>
-					<tr><td>Username:</td><td><input type="text" name="login"></td></tr>
-					<tr><td>Password:</td><td><input type="password" name="password"></td></tr>
+				<table id="userInputTable">
+					<tr><td>Username:</td><td><input type="text" name="login"></td></tr>				
+					<tr><td>Password:</td><td><input type="password" name="password"></td></tr>					
 					<tr><td>&nbsp;</td><td><input type='checkbox' name='remember' value='1'> Remember me</td></tr>
 					<tr><td>&nbsp;</td><td><input type="submit" value="Enter"></td></tr>
 					<tr><td colspan=2>&nbsp;</td></tr>
@@ -32,7 +32,7 @@
 	</div>
 
 	<div class="row" id="firstPageSecondRow">	
-		<div class="col-xs-10 col-s-10 col-m-10 col-l-10 col-xl-10" id="readyUpSection">
+		<div class="readyUpSection">
 			<button id="readyUp"> Im Ready! </button>
 		</div>
 	</div>	
@@ -42,7 +42,9 @@
 <!--This is the second pages screen and div classes -->
 <div class="secondPageLayout">
 	<div class="row" id="secondPageRow">
-		Waiting on Player 2
+		<div id="waiting"> 
+			Waiting on Player 2 
+		</div>
 	</div>
 </div>
 
