made user profile object associated with the uid, next need to figure out right place to push

--- a/login.html
+++ b/login.html
@@ -31,11 +31,12 @@
 
 		<div id="new-user-modal" class="modal" style="background-color: orange">
 			<h1 class="modal-text">login here</h1>
-			<label for="user-name-input">E-mail</label>
+			<label for="new-user-name-input">E-mail</label>
             <input class="form-control" id="new-user-name-input" type="text">
-
-<!-- 			input user name box -->
-
+ <!--            handle input -->
+            <label for="user-handle-input">Handle</label>
+            <input class="form-control" id="user-handle-input" type="text">
+<!-- 			end handle input -->
             <label for="password-input">Password</label>
             <input class="form-control" id="new-password-input" type="password">
             <label for="password-again-input">Password Again</label>
