Fixed classes and ids in HTML file

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	
 	<!-- This is the first page divs classes -->
 
-	<div class="row" id="layoutFirstPage">
-		<section class ="logInSection col-s-10 col-m-10 col-l-10 col-xl-10">
+	<div class="row" id="layout-first-page">
+		<section class ="log-in-section col-s-10 col-m-10 col-l-10 col-xl-10">
 			<h1 id="sign-out">sign out</h1>
 			<div id="login-modal" class="modal">
 				<h1 class="modal-text">login here</h1>
@@ -33,7 +33,7 @@
 
 		<!-- need to have a new user login modal -->
 		
-		<section class="newUserSection col-s-10 col-m-10 col-l-10 col-xl-10">
+		<section class="new-user-section col-s-10 col-m-10 col-l-10 col-xl-10">
 			<div id="new-user-modal" class="modal">
 				<h1 class="modal-text">login here</h1>
 				<label for="new-user-name-input">E-mail</label>
@@ -54,43 +54,43 @@
 
 	<!--This is the second pages screen and div classes -->
 	
-	<div class="row" id ="secondPageLayout">
-		<secton class ="secondPageConnectionScreen col-s-10 col-m-10 col-l-10 col-xl-10">
+	<div class="row" id ="second-page-layout">
+		<secton class ="second-page-connection-screen col-s-10 col-m-10 col-l-10 col-xl-10">
 				<h3> Waiting on Player 2 </h3>
 		</secton>
 	</div>
 
 	<!-- This is the 3rd page which contains the coding content and versus screen-->
 	
-	<div class="thirdPageLayout">
-		<div id="page3HeaderSection">
-			<div class="headerForQuestion">
+	<div class="third-page-layout">
+		<div id="page-3-header-section">
+			<div class="header-for-question">
 				<h2> Question insertion </h2>
 			</div>
 		</div>
 
-		<div class="coderSpot">			
-				<div class="codingArea">
-					<div id="userCodeOne">
+		<div class="coder-spot">			
+				<div class="coding-area">
+					<div id="user-code-one">
 						<h4> User 1 Coding is in here under userCodeOne <br> div class tag </h4>
 					</div>
 				</div>
 				
-				<div class="symbolArea">
-					<div id="versusSymbolArea">
+				<div class="symbol-area">
+					<div id="versus-symbol-area">
 						<h4> This will have some kind <br> of symbol or animation </h4>
 					</div>
 				</div>
 
-				<div class="codingArea">
-					<div id="userCodeTwo">
+				<div class="coding-area">
+					<div id="user-code-two">
 						<h4> User 2 Coding is in here under userCode2 <br> div class tag </h4>
 					</div>
 				</div>	
 		</div>
 		
 		<footer>
-			<div class="row" id="leaderboardSection">
+			<div class="row" id="leaderboard-section">
 				<div class="leaderboard">
 					<h4> The Leaderboard is here  </h4>
 				</div>
@@ -99,19 +99,19 @@
 	</div>
 
 		<!-- this is the final page with victory screen and play again button-->
-	<div class="row" id="fourthPageLayout">
-		<section class ="displayFinalPage col-s-10 col-m-10 col-l-10 col-xl-10">
-			<div id="userGameDisplay">
-				<div class="winnerSection">
+	<div class="row" id="fourth-page-layout">
+		<section class ="display-final-page col-s-10 col-m-10 col-l-10 col-xl-10">
+			<div id="user-game-display">
+				<div class="winner-section">
 					<h5> Winner is: ------ </h5>
 				</div>
 			
-				<div class="loserSection">
+				<div class="loser-section">
 					<h5> Loser is: ----- </h5>
 				</div>
 	
-				<div class="playAgainSection">
-					<button id="playAgain"> Play Again? </button>
+				<div class="play-again-section">
+					<button id="play-again"> Play Again? </button>
 				</div>
 			</div>
 		</section>
