Corrected missed id in html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- This is the first page divs classes -->
 
 	<div class="row" id="layout-first-page">
-		<section class ="log-in-section col-s-10 col-m-10 col-l-10 col-xl-10">
+		<section class="log-in-section col-s-10 col-m-10 col-l-10 col-xl-10">
 			<h1 id="sign-out">sign out</h1>
 			<div id="login-modal" class="modal">
 				<h1 class="modal-text">login here</h1>
@@ -27,7 +27,7 @@
 	            <button class="btn btn-primary" id="github-sign-in" type="submit">Sign in with GitHub</button>
 	            <br>
 	            <br>
-	            <button class="btn btn-primary" id="readyUp" type="submit"> Im Ready! </button>
+	            <button class="btn btn-primary" id="ready-up" type="submit"> Im Ready! </button>
 			</div>
 		</section>
 
@@ -54,8 +54,8 @@
 
 	<!--This is the second pages screen and div classes -->
 	
-	<div class="row" id ="second-page-layout">
-		<secton class ="second-page-connection-screen col-s-10 col-m-10 col-l-10 col-xl-10">
+	<div class="row" id="second-page-layout">
+		<secton class="second-page-connection-screen col-s-10 col-m-10 col-l-10 col-xl-10">
 				<h3> Waiting on Player 2 </h3>
 		</secton>
 	</div>
@@ -100,7 +100,7 @@
 
 		<!-- this is the final page with victory screen and play again button-->
 	<div class="row" id="fourth-page-layout">
-		<section class ="display-final-page col-s-10 col-m-10 col-l-10 col-xl-10">
+		<section class="display-final-page col-s-10 col-m-10 col-l-10 col-xl-10">
 			<div id="user-game-display">
 				<div class="winner-section">
 					<h5> Winner is: ------ </h5>
