Corrected html and css files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Code Wars </title>
+	<title> Holmgang! </title>
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -12,7 +12,7 @@
 	
 	<!-- This is the first page divs classes -->
 
-	<div class="row" id="layout-first-page">
+	<div class="row" id="first-page-layout">
 		<section class="log-in-section col-s-10 col-m-10 col-l-10 col-xl-10">
 			<h1 id="sign-out">sign out</h1>
 			<div id="login-modal" class="modal">
@@ -23,8 +23,6 @@
 	            <input class="form-control" id="password-input" type="password">
 	            <button class="btn btn-primary" id="login-btn" type="submit">Login</button>
 	            <button class="btn btn-primary" id="add-newuser-btn" type="submit">New User</button>
-	            <!-- button for github login -->
-	            <button class="btn btn-primary" id="github-sign-in" type="submit">Sign in with GitHub</button>
 	            <br>
 	            <br>
 	            <button class="btn btn-primary" id="ready-up" type="submit"> Im Ready! </button>
@@ -62,7 +60,7 @@
 
 	<!-- This is the 3rd page which contains the coding content and versus screen-->
 	
-	<div class="third-page-layout">
+	<div class="row" id="third-page-layout">
 		<div id="page-3-header-section">
 			<div class="header-for-question">
 				<h2> Question insertion </h2>
