fully updated almost completely working

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
 	<div id="body-background">
 
-		<div id="login-modal" class="modal">
+		<div id="login-modal" class="modal-sm">
 			<h1 class="modal-text">login here</h1>
 			<label for="user-name-input">E-mail</label>
             <input class="form-control" id="user-name-input" type="text">
@@ -29,7 +29,7 @@
 
 		<!-- need to have a new user login modal -->
 
-		<div id="new-user-modal" class="modal" style="background-color: orange">
+		<div id="new-user-modal" class="modal-sm">
 			<h1 class="modal-text">login here</h1>
 			<label for="new-user-name-input">E-mail</label>
             <input class="form-control" id="new-user-name-input" type="text">
