--- a/index.html
+++ b/index.html
@@ -65,7 +65,37 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-lg-10 mx-auto">
-					<h2> Log In Section Goes Here </h2>
+					<h1 id="sign-out">sign out</h1>				
+					<div id="login-modal" class="modal-sm">
+						<h1 class="modal-text">login here</h1>
+						<label for="user-name-input">E-mail</label>
+						<input class="form-control" id="user-name-input" type="text">
+						<label for="password-input">Password</label>
+						<input class="form-control" id="password-input" type="password">
+						<button class="btn btn-primary" id="login-btn" type="submit" style="background-color: #ee7600; color: navy">Login</button>
+						<button class="btn btn-primary" id="add-newuser-btn" type="submit" style="background-color: #ee7600; color: navy">New User</button>
+							
+							<!-- button for github login -->
+
+						<button class="btn btn-primary" id="github-sign-in" type="submit" style="background-color: #ee7600; color: navy">Sign in with GitHub</button>
+					</div>
+
+							<!-- need to have a new user login modal -->
+
+					<div id="new-user-modal" class="modal-sm">
+						<h1 class="modal-text">login here</h1>
+						<label for="new-user-name-input">E-mail</label>
+						<input class="form-control" id="new-user-name-input" type="text">
+							<!--            handle input -->
+						<label for="user-handle-input">Handle</label>
+						<input class="form-control" id="user-handle-input" type="text">
+							<!-- 			end handle input -->
+						<label for="password-input">Password</label>
+						<input class="form-control" id="new-password-input" type="password">
+						<label for="password-again-input">Password Again</label>
+						<input class="form-control" id="new-password-input-verify" type="password">
+						<button class="btn btn-primary" id="submit-newuser-btn" type="submit" style="background-color: #ee7600; color: navy">Submit</button>
+					</div>					
 				</div>
 			</div>
 		</div>
