Added code check button to page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<div id="current-player">
 					<textarea class="code-textarea"></textarea>
 				</div>
+				<input type="button" id="check-code" value="Submit Code">
 			</div>
 
 			<div class="coding-area col-xs-6">
