Created Alert Modal
For use in login screen failures.  Pass it a string to display the message

--- a/index.html
+++ b/index.html
@@ -54,32 +54,34 @@
 
 	<!-- Modal -->
 	<div class="modal">
-		<!-- Main Login Form -->
-		<div id="login-modal">
-			<h1 class="modal-text">Login</h1>
-			<label for="user-name-input">E-mail</label>
-			<input class="form-control" id="user-name-input" type="text">
-			<label for="password-input">Password</label>
-			<input class="form-control" id="password-input" type="password">
-			<button class="btn btn-primary" id="login-btn" type="submit">Login</button>
-			<button class="btn btn-primary" id="add-newuser-btn" type="submit">New User</button>
-		</div>
-		<!-- /Main Login Form -->
+		<div id="modal-content">
+			<!-- Main Login Form -->
+			<div id="login-modal">
+				<h1 class="modal-text">Login</h1>
+				<label for="user-name-input">E-mail</label>
+				<input class="form-control" id="user-name-input" type="text">
+				<label for="password-input">Password</label>
+				<input class="form-control" id="password-input" type="password">
+				<button class="btn btn-primary" id="login-btn" type="submit">Login</button>
+				<button class="btn btn-primary" id="add-newuser-btn" type="submit">New User</button>
+			</div>
+			<!-- /Main Login Form -->
 
-		<!-- New User Form -->
-		<div id="new-user-modal">
-			<h1 class="modal-text">New User</h1>
-			<label for="new-user-name-input">E-mail</label>
-			<input class="form-control" id="new-user-name-input" type="text">
-			<label for="user-handle-input">Handle</label>
-			<input class="form-control" id="user-handle-input" type="text">
-			<label for="password-input">Password</label>
-			<input class="form-control" id="new-password-input" type="password">
-			<label for="password-again-input">Repeat Password</label>
-			<input class="form-control" id="new-password-input-verify" type="password">
-			<button class="btn btn-primary" id="submit-newuser-btn" type="submit">Submit</button>
+			<!-- New User Form -->
+			<div id="new-user-modal">
+				<h1 class="modal-text">New User</h1>
+				<label for="new-user-name-input">E-mail</label>
+				<input class="form-control" id="new-user-name-input" type="text">
+				<label for="user-handle-input">Handle</label>
+				<input class="form-control" id="user-handle-input" type="text">
+				<label for="password-input">Password</label>
+				<input class="form-control" id="new-password-input" type="password">
+				<label for="password-again-input">Repeat Password</label>
+				<input class="form-control" id="new-password-input-verify" type="password">
+				<button class="btn btn-primary" id="submit-newuser-btn" type="submit">Submit</button>
+			</div>
+			<!-- /New User Form -->
 		</div>
-		<!-- /New User Form -->
 	</div>
 	<!-- /Modal -->
 
