--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
 	<!-- Custom Style Sheet -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
@@ -19,7 +19,7 @@
 
 		<div class="row" id="header-row">
 			<div class="col-xs-8 col-xs-offset-2">
-				<h1>Header</h1>
+				<h1>Holmgang</h1>
 			</div>
 			<div class="col-xs-2">
 				<p id="sign-out">sign out</p>
