Added display names

--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@
 
 		<div class="row" id="question-row">
 			<div class="col-xs-12">
-				<h2 id="question-text"> Question</h2>
+				<h2 id="question-text">Question</h2>
 			</div>
 		</div>
 
+		<div class="row" id="players-row">
+			<div class="col-xs-6">
+				<h5 id="player-name-display">Player</h5>
+			</div>
+			<div class="col-xs-6">
+				<h5 id="opponent-name-display">Opponent</h5>
+			</div>
+		</div>	
+				
 		<div class="row" id="code-row">			
 			<div class="coding-area col-xs-6">
 				<div id="current-player">
