Added display content
Added function to display names and avatars, and added styles to each

--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
 		</div>
 
 		<div class="row" id="players-row">
-			<div class="col-xs-6">
-				<h5 id="player-name-display">Player</h5>
+			<div class="col-xs-2" id="player-avatar">
 			</div>
-			<div class="col-xs-6">
-				<h5 id="opponent-name-display">Opponent</h5>
+			<div class="col-xs-4 username-div">
+				<h5 id="player-name-display"></h5>
+			</div>
+			<div class="col-xs-2" id="opponent-avatar">
+			</div>
+			<div class="col-xs-4 username-div">
+				<h5 id="opponent-name-display"></h5>
 			</div>
 		</div>	
 				
