Added textarea format
Changed highlight colors, disabled spellcheck, adjusted tab character spacing

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 		<div class="row" id="code-row">			
 			<div class="coding-area col-xs-6">
 				<div id="current-player">
-					<textarea class="code-textarea"></textarea>
+					<textarea class="code-textarea" spellcheck="false"></textarea>
 				</div>
 				<input type="button" id="check-code" value="Submit Code">
 			</div>
 
 			<div class="coding-area col-xs-6">
 				<div id="other-player">
-					<textarea class="code-textarea" readonly></textarea>
+					<textarea class="code-textarea" spellcheck="false" readonly></textarea>
 				</div>
 			</div>	
 		</div>
