Added condition to show wait on other player disconnect

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<div class="row" id="question-row">
 			<div class="col-xs-12">
-				<h2 id="question-text">Question</h2>
+				<h2 id="question-text"></h2>
 			</div>
 		</div>
 
