Removed unused files, and changed folder names

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	<!-- jQuery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Game JS File -->
-	<script src="Javascript/app.js"></script>
+	<script src="javascript/app.js"></script>
 
 </body>
 </html>
