--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
 	<!-- Custom Style Sheet -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	
 </head>
 <body>
@@ -105,7 +105,7 @@
 	<!-- jQuery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Game JS File -->
-	<script src="javascript/app.js"></script>
+	<script src="Javascript/app.js"></script>
 
 </body>
 </html>
